WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285159
Fix baseline calculation few cases for tables with empty rows
https://bugs.webkit.org/show_bug.cgi?id=285159
Summary
Fix baseline calculation few cases for tables with empty rows
Ahmad Saleem
Reported
2024-12-25 20:08:09 PST
Hi Team, This is partial merge of following blink commit to progress four cases: Blink Commit:
https://chromium.googlesource.com/chromium/src.git/+/9fa80d5986647e8be2f1b19fc5e722cb51da4e27
It progresses following cases in WPT test case:
https://wpt.fyi/results/css/css-tables/tentative/baseline-table.html?label=experimental&label=master&aligned
> Empty row's baseline is center of the row. > First row defines baseline even if empty. > Two rows empty, 1st row has css height. > First row empty with css height, 2 row has content
Just raising, so we can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-25 20:09:10 PST
<
rdar://problem/142046863
>
Ahmad Saleem
Comment 2
2024-12-25 20:13:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38380
EWS
Comment 3
2024-12-27 13:34:39 PST
Committed
288314@main
(28d5064d2793): <
https://commits.webkit.org/288314@main
> Reviewed commits have been landed. Closing PR #38380 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug