Fix few baseline calculation cases for tables with empty rows

https://bugs.webkit.org/show_bug.cgi?id=285159
rdar://142046863

Reviewed by Alan Baradlay.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Partial Merge: https://chromium.googlesource.com/chromium/src.git/+/9fa80d5986647e8be2f1b19fc5e722cb51da4e27

CSS says: "If a row has no cell box aligned to its baseline, the baseline of that
row is the bottom content edge of the lowest cell in the row."

This partial merge progresses following cases of baseline in WPT test case:

> Empty row's baseline is center of the row.
> First row defines baseline even if empty.
> Two rows empty, 1st row has css height.
> First row empty with css height, 2 row has content

* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::firstLineBaseline const):
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/tentative/baseline-table-expected.txt: Rebaselined
* LayoutTests/platform/glib/fast/dynamic/insert-before-table-part-in-continuation-expected.txt:
* LayoutTests/platform/ios/fast/dynamic/insert-before-table-part-in-continuation-expected.txt:
* LayoutTests/platform/mac/fast/dynamic/insert-before-table-part-in-continuation-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/css/css-tables/tentative/baseline-table-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/288314@main